--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-asgiref    3.8.1
-Django     5.2.1
-pillow     11.2.1
-pip        24.0
-setuptools 65.5.0
-sqlparse   0.5.3
-tzdata     2025.2
+asgiref==3.8.1
+Django==5.2.1
+pillow==11.2.1
+sqlparse==0.5.3
+tzdata==2025.2
 gunicorn
